--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@
   color: lightblue;
   cursor: pointer;
 }
+.button-base.button-base:hover {
+  background: linear-gradient(0deg, rgb(133, 136, 104) 0%, rgb(110, 153, 108) 35%, rgb(110, 172, 126) 50%, rgb(110, 153, 108) 65%, rgb(133, 136, 104) 100%);
+  font-weight: 700;
+  font-size: 10pt;
+}
 
 .label {
   margin-top: 40px;
@@ -21,12 +26,6 @@
   font-size: 17pt;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: rgb(13, 206, 87);
-}
-
-.button-base:hover {
-  background: linear-gradient(0deg, rgb(133, 136, 104) 0%, rgb(110, 153, 108) 35%, rgb(110, 172, 126) 50%, rgb(110, 153, 108) 65%, rgb(133, 136, 104) 100%);
-  font-weight: 700;
-  font-size: 10pt;
 }
 
 .choice-container {
